fixing CI issue TOX Poetry related

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ setenv =
     PYPY3323BUG = 1
     black,lint,isort,ruff: LINT_ARGS = "src tests scripts"
     # Fallback File name for storing output of for all poetry export operations
-    DEFAULT_REQS_FILE = reqs.txt
+    #alan DEFAULT_REQS_FILE = reqs.txt
 extras =
     test
 commands =
@@ -142,20 +142,21 @@ depends = {py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
 
 
 # POETRY EXPORT
-[testenv:pin-deps]
+# alan disable [testenv:pin-deps]
 # Pin Deps        : tox -e pin-deps
 # With Test Extras: tox -e pin-deps -- -E test
 # With Target File: REQS_FILE=reqs-test.txt tox -e pin-deps -- -E test
-description = Pin dependencies from poetry lock. Use the REQS_FILE var, for custom file name.
-basepython = {env:TOXPYTHON:python3}
-passenv = REQS_FILE
-skip_install = true
-deps =
-    poetry
-    poetry-plugin-export
-commands =
-    python -m poetry export -f requirements.txt -o {env:REQS_FILE:{env:DEFAULT_REQS_FILE}} {posargs}
-    python -c 'print( "\n  Generated requirements file: " + "{env:REQS_FILE:{env:DEFAULT_REQS_FILE}}" );'
+# alan description = Pin dependencies from poetry lock. Use the REQS_FILE var, for custom file name.
+# alan basepython = {env:TOXPYTHON:python3}
+# alan passenv = REQS_FILE
+# alan skip_install = true
+#alan deps =
+#alan    poetry
+#alan    poetry-plugin-export
+#alan commands =
+#alan    python -m poetry export -f requirements.txt -o {env:REQS_FILE:{env:DEFAULT_REQS_FILE}} {posargs}
+#alan
+#alan    python -c 'print( "\n  Generated requirements file: " + "{env:REQS_FILE:{env:DEFAULT_REQS_FILE}}" );'
 
 
 ## STATIC TYPE CHECKING
@@ -163,7 +164,7 @@ commands =
 [testenv:type]
 description = Type checking with mypy
 basepython = {env:TOXPYTHON:python3}
-deps = -r {env:REQS_FILE:{env:DEFAULT_REQS_FILE:reqs-typing.txt}}
+# alan deps = -r {env:REQS_FILE:{env:DEFAULT_REQS_FILE:reqs-typing.txt}}
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
