--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
-envlist =
-    {py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
-    coverage
-isolated_build = true
-skip_missing_interpreters = true
-minversion = 3.14
-requires = virtualenv >= 20.0.34
+requires =
+    tox>=4
+env_list = lint, type, py{38,39,310,311,312}
 
-
+#tox-gh-actions is a tox plugin which helps running tox 
+#on GitHub Actions with multiple different Python versions on multiple workers in paralle
 [gh-actions]
 python =
     3.6: {py36}{, -path, -sdist, -wheel, -edit}
@@ -16,6 +13,7 @@ python =
     3.9: {py39}{, -path, -sdist, -wheel, -edit}
     3.10: {py310}{, -path, -sdist, -wheel, -edit}
     3.11: {py311}{, -path, -sdist, -wheel, -edit}
+    3.12: {py311}{, -path, -sdist, -wheel, -edit}
 
 
 [gh-actions:env]
@@ -50,6 +48,7 @@ setenv =
     black,lint,isort,ruff: LINT_ARGS = "src tests scripts"
     # Fallback File name for storing output of for all poetry export operations
     #alan DEFAULT_REQS_FILE = reqs.txt
+    # A list of “extras” from the package to be installed.
 extras =
     test
 commands =
@@ -61,12 +60,12 @@ commands =
 
 
 # DEV
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
 
 # SDIST
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
 description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
@@ -75,7 +74,7 @@ setenv =
     {[testenv]setenv}
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python3}
 setenv = {[wheel_env]setenv}
@@ -84,7 +83,7 @@ changedir = {toxinidir}
 commands = pip wheel --wheel-dir {env:_WHEEL_DIR} {toxinidir}
 
 # Install WHEEL and TEST
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
 description = Install Wheel, and Test
 basepython = {env:TOXPYTHON:python3}
 setenv =
@@ -97,15 +96,15 @@ commands_pre =
 
 
 # PATH
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
 description = Add Source Code to Path & Test
 setenv =
     {[testenv]setenv}
     PYTHONPATH = {toxinidir}{/}src{:}{toxinidir}{/}tests
-deps = poetry
+deps = hatchling
 skip_install = true
 commands =
-    poetry install --no-root -E test
+    hatchling -h
     {[testenv]commands}
 
 # LOCAL DEVELOPMENT
@@ -138,7 +137,7 @@ commands =
     coverage report --skip-covered --show-missing -i
     coverage xml -o {toxworkdir}/coverage.xml -i
     coverage html -d {toxworkdir}/htmlcov -i
-depends = {py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
+depends = {py312, py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
 
 
 # POETRY EXPORT
