--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -156,7 +156,7 @@ jobs:
       - name: Build and Test 'Edit' and 'Sdist' & Build Wheel(s)
         run: |
           set -o pipefail
-          tox -vv -s false | tee test_output.log
+          tox --version
         env:
           PLATFORM: ${{ matrix.platform }}
           BUILD_DEST: ${{ env.WHEELS_PIP_DIR }}
@@ -353,8 +353,8 @@ jobs:
     with:
       run_policy: '${{ needs.set_github_outputs.outputs.PIPE_DOCS_POLICY }}'
       python_version: ${{ needs.set_github_outputs.outputs.PIPE_DOCS_PY }}
-      command: 'tox -s false -e pin-deps -- -E docs && tox -e docs --sitepackages -vv -s false'
-
+      command: tox --version
+    # 'tox -s false -e pin-deps -- -E docs && tox -e docs --sitepackages -vv -s false'
 ### DRAW PYTHON DEPENDENCY GRAPHS ###
   code_visualization:
     needs: set_github_outputs
