--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -162,7 +162,8 @@ jobs:
           BUILD_DEST: ${{ env.WHEELS_PIP_DIR }}
 
       - name: List Wheel(s) created for Distro and its Requirements
-        run: ls -l ${{ env.WHEELS_PIP_DIR }}
+        run: ls -l 
+        #run: ls -l ${{ env.WHEELS_PIP_DIR }}
 
       ### PARSE WHEEL File NAME ###
       - name: Extract Wheel Name and Size
