--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,98 +1,115 @@
-# pyproject .toml specification https://packaging.python.org/en/latest/specifications/pyproject-toml/
-# see https://python-package-generator.readthedocs.io/en/master/
 # BUILD
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
-# hatchling 
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+# Poetry
+
 # Information required for building (sdist/wheel)
 ## Also renders on pypi as 'subtitle'
-
-[project]
+[tool.poetry]
 name = "dmc_view"
-dynamic = ["version"]
-description = "Digital Magnatic Compass Viewer"
+version = "0.0.1"
+description = "Digital Magnatic Compass View"
+authors = ["Alan Mehio <alan.mehio@gmail.com>"]
+maintainers = ["Alan Mehio <alan.mehio@gmail.com>"]
+license = "AGPL-3.0-only"
 readme = "README.rst"
-license = "MIT"
-requires-python = ">=3.8"
-authors = [
-  {name = "Alan", email = "alan@holm.com"},
-  {name = "Iso", email = "isog@holm.com"},
-]
-maintainers = [
-  {name = "alan", email = "alan@holm.com"}
-]
+
+homepage = "https://github.com/alanmehio/dmc-view"
+repository = "https://github.com/alanmehio/dmc-view"
+documentation = "https://dmc-view.readthedocs.io/"
+
 keywords = [
-    "Compass","Azimuth", "Bank", "Elevation", "Inclination",
-    "Declination", "Magnatic Compass"
+    "python package",
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
+    "Intended Audience :: End Users/Desktop",
+    "Intended Audience :: Science/Research",
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Natural Language :: English",
     "Operating System :: Unix",
     "Operating System :: POSIX :: Linux",
     "Operating System :: MacOS",
-    "Operating System :: Microsoft",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: Software Development",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: System :: Software Distribution",
-    "Typing :: Typed",
+    "Typing :: Typed"
 ]
 
-dependencies = [
-  "pyside6>=6.6.1",
+packages = [
+    { include = "dmc_view", from = "src" },
 ]
 
-
-[project.urls]
-Homepage = "https://github.com/alanmehio/dmc-view"
-Source = "https://github.com/alanmehio/dmc-view"
-Issues="https://github.com/alanmehio/dmc-view/issues"
-Documentation = "https://dmc-view.readthedocs.io/"
-
-
-[tool.hatch.version]
-path = "src/dmc_view/__about__.py"
-
-[tool.hatch.envs.types]
-extra-dependencies = [
-  "mypy>=1.0.0",
-]
-[tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:src/dmc_view tests}"
-
-[tool.coverage.run]
-source_pkgs = ["dmc_view", "tests"]
-branch = true
-parallel = true
-omit = [
-  "src/dmc_view/__about__.py",
+include = [
+    { path = "tests", format = "sdist" },
+    { path = "docs/**/*.rst", format = "sdist" },
+    { path = "docs/conf.py", format = "sdist" },
+    { path = "src/**/*.typed", format = "sdist" },
+    { path = "src/stubs/*.pyi", format = "sdist" },
+    "pyproject.toml",
+    "LICENSE",
+    "README.rst",
+    "CONTRIBUTING.md",
+    "CHANGELOG.rst",
 ]
 
-[tool.coverage.paths]
-dmc_view = ["src/dmc_view", "*/dmc-view/src/dmc_view"]
-tests = ["tests", "*/dmc-view/tests"]
-
-[tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
+exclude = [
+    "docs/*",
+    "requirements/*",
+    "scripts/*.py",
+    "tox.ini",
+    ".circleci/config.yml",
+    ".coveragerc",
+    ".DS_Store",
+    ".gitignore",
+    ".prospector.yml",
+    ".pylintrc",
+    ".readthedocs.yml",
+    ".scrutinizer.yml",
+    ".travis.yml"
 ]
 
+# PyPi url links, that appear in 'Project Links' section
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/dmc-view/issues"
+"CI: Github Actions" = "https://github.com/alanmehio/dmc-view/actions"
+"Documentation" = "https://dmc-view.readthedocs.io/"
+"Source Code" = "https://github.com/alanmehio/dmc-view"
+"Changelog" = "https://github.com/alanmehio/dmc-view/blob/master/CHANGELOG.rst"
+"Code of Conduct" = "https://github.com/alanmehio/dmc-view/blob/master/CONTRIBUTING.rst"
+
+
+# Caret requirements allow SemVer compatible updates to a specified version. An update is allowed if the new version number does not modify the left-most non-zero digit in the major, minor, patch grouping. For instance, if we previously ran poetry add requests@^2.13.0 and wanted to update the library and ran poetry update requests, poetry would update us to version 2.14.0 if it was available, but would not update us to 3.0.0. If instead we had specified the version string as ^0.1.13, poetry would update to 0.1.14 but not 0.2.0. 0.0.x is not considered compatible with any other version.
+# REQUIREMENT  VERSIONS ALLOWED
+# ^1.2.3	   >=1.2.3 <2.0.0
+# ^1.2	       >=1.2.0 <2.0.0
+# ^1	       >=1.0.0 <2.0.0
+# ^0.2.3	   >=0.2.3 <0.3.0
+# ^0.0.3	   >=0.0.3 <0.0.4
+# ^0.0	       >=0.0.0 <0.1.0
+# ^0	       >=0.0.0 <1.0.0
+# "~" is the more conservative compared to "^"
+# Tilde requirements specify a minimal version with some ability to update. If you specify a major, minor, and patch version or only a major and minor version, only patch-level changes are allowed. If you only specify a major version, then minor- and patch-level changes are allowed.
+# REQUIREMENT  VERSIONS ALLOWED
+# ~1.2.3	   >=1.2.3 <1.3.0
+# ~1.2	       >=1.2.0 <1.3.0
+# ~1	       >=1.0.0 <2.0.0
+
+
+### Dependency Constraints, aka Requirements ###
+[tool.poetry.dependencies]
+python = ">=3.8, <3.13"
+pyside6= ">=6.6.1"
 
 
 
@@ -101,8 +118,6 @@ pytest = { version = "^8.0.0", optional = true }
 pytest-cov = { version = "^4.1.0", optional = true }
 pytest-explicit = { version = "^1.0.1", optional = true }
 pytest-xdist = { version = "^3.5.0", optional = true }
-pytest-click = { version = "^1.1.0", optional = true }
-pytest-run-subprocess = { version = "^0.10.0", optional = true }
 
 # Type Checking
 mypy = { version = "^1.8.0", optional = true }
@@ -116,6 +131,39 @@ sphinx-autobuild = { version = "^2021.3.14", optional = true }
 sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
 sphinxcontrib-mermaid = { version = "^0.9.2", optional = true, python = ">=3.7,<3.13" }
 
+### EXTRAS ###
+[tool.poetry.extras]
+test = [
+    "pytest",
+    "pytest-cov",
+    "pytest-explicit",
+    "pytest-xdist",
+]
+typing = [
+    "mypy",
+    "types-requests",
+    "pytest",
+]
+docs = [
+    "sphinx",
+    "sphinx-autodoc-typehints",
+    "sphinx-rtd-theme",
+    "sphinxcontrib-spelling",
+    "sphinx-inline-tabs",
+    "sphinxcontrib-mermaid",
+]
+docslive = [
+    "sphinx",
+    "sphinx-autodoc-typehints",
+    "sphinx-rtd-theme",
+    "sphinxcontrib-spelling",
+    "sphinx-inline-tabs",
+    "sphinxcontrib-mermaid",
+    "sphinx-autobuild",
+]
+
+[tool.poetry.plugins."poetry.application.plugin"]
+export = "poetry_plugin_export.plugins:ExportApplicationPlugin"
 
 # TOOLS
 [tool.pytest.ini_options]
@@ -150,24 +198,4 @@ skips = [
 ]
 
 [tool.software-release]
-version_variable = "src/dmc_view/__about__.py:__version__"
-
-[tool.tox]
-legacy_tox_ini = """
-    [tox]
-    min_version = 4.0
-    env_list =
-        py312
-        py311
-        py310
-        py39
-        type
-
-    [testenv]
-    deps = pytest
-    commands = pytest tests
-
-    [testenv:type]
-    deps = mypy
-    commands = mypy src
-"""
+version_variable = "src/dmc_view/__init__.py:__version__"
