--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -260,21 +260,21 @@ jobs:
           echo "Sent to Codecov: $file !"
         done
 
-## DOCKER BUILD and PUBLISH ON DOCKERHUB ##
+## DOCKER BUILD and PUBLISH ON DOCKERHUB ## FIXME 
 # Ref Page: https://automated-workflows.readthedocs.io/en/main/ref_docker/
-  docker_build:
-    needs: [set_github_outputs, test_suite]
-    uses: boromir674/automated-workflows/.github/workflows/docker.yml@v1.1.0
-    if: always()
-    with:
-      acceptance_policy: ${{ needs.set_github_outputs.outputs.PIPE_DOCKER_POLICY }}
-      image_slug: "dmc-view"
+  #docker_build:
+    #needs: [set_github_outputs, test_suite]
+    #uses: boromir674/automated-workflows/.github/workflows/docker.yml@v1.1.0
+    #if: always()
+    #with:
+      #acceptance_policy: ${{ needs.set_github_outputs.outputs.PIPE_DOCKER_POLICY }}
+      #image_slug: "dmc-view"
       # target_stage: "some_stage_alias"  # no stage, means no `--target` flag, on build
-      tests_pass: ${{ needs.test_suite.result == 'success' }}
-      tests_run: ${{ !contains(fromJSON('["skipped", "cancelled"]'), needs.test_suite.result) }}
-      DOCKER_USER: ${{ vars.DOCKER_USER }}
-    secrets:
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      #tests_pass: ${{ needs.test_suite.result == 'success' }}
+      #tests_run: ${{ !contains(fromJSON('["skipped", "cancelled"]'), needs.test_suite.result) }}
+      #DOCKER_USER: ${{ vars.DOCKER_USER }}
+    #secrets:
+      #DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   ## JOB: Signal for Automated PyPI Upload ##
   check_which_git_branch_we_are_on:
