--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -148,8 +148,7 @@ jobs:
         run: tox -vv -s false -e pin-deps -- -E typing
        
       - name: Do Type Checking
-        # run: tox -e type -vv -s false  FIXME
-        run: tox --version
+        run: tox -e type -vv -s false
 
       ###### TEST SUITE RUN against Edit and Sdist ######
       - name: Build and Test 'Edit' and 'Sdist' & Build Wheel(s)
