mypy.ini True instead of true

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,7 +9,7 @@ warn_unused_configs = True
 ### see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
 [mypy.override]
 module = "PySide6"
-ignore_errors = true
+ignore_errors = True
 
 # Per-module options:
 #[mypy-mycode.foo.*]
