--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,6 +131,13 @@ sphinx-autobuild = { version = "^2021.3.14", optional = true }
 sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
 sphinxcontrib-mermaid = { version = "^0.9.2", optional = true, python = ">=3.7,<3.13" }
 
+### mypy config 
+# see https://mypy.readthedocs.io/en/stable/config_file.html
+### see https://stackoverflow.com/questions/72345536/how-to-avoid-mypy-checking-explicitly-excluded-but-imported-modules-without-ma
+### see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
+[tool.mypy.override]
+module = "PySide6"
+ignore_errors = True
 
 ### EXTRAS ###
 [tool.poetry.extras]
