--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,7 @@ sphinxcontrib-mermaid = { version = "^0.9.2", optional = true, python = ">=3.7,<
 ### see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
 [tool.mypy.override]
 module = "PySide6"
-ignore_errors = True
+ignore_errors = true
 
 ### EXTRAS ###
 [tool.poetry.extras]
