fixing the lint issue which include isort and black

--- a/tox.ini
+++ b/tox.ini
@@ -61,11 +61,13 @@ commands =
 
 
 # DEV
+# Alan : pypy3 is the any interpretor of python version 3.x.x
 [testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
 
 # SDIST
+# Alan : pypy3 is the any interpretor of python version 3.x.x
 [testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
 description = Install as Source Distribution & Test
 
@@ -316,7 +318,12 @@ commands =
 
 
 # CODE LINTING, STATIC (STYLE) CHECKING
-
+# Alan Below:
+# tox -e lint
+# lint: commands[0]> isort --check src tests scripts
+# lint: commands[1]> black --check -S --config pyproject.toml src tests scripts
+#  -S, --skip-string-normalization
+#   Don't normalize string quotes or prefixes.
 [testenv:lint]
 description = test if code conforms with our styles
     to check against code style (aka lint check) run: tox -e lint
@@ -331,7 +338,9 @@ commands =
     isort {posargs:{env:APPLY_LINT:--check}} "{env:LINT_ARGS:.}"
     black {posargs:{env:APPLY_LINT:--check}} -S --config pyproject.toml "{env:LINT_ARGS:.}"
 
-
+## BLACK ##
+# To check : tox -e black
+# To fix : from python right click and select "formatt" 
 [testenv:black]
 description = black ops
 deps = black
@@ -340,6 +349,9 @@ changedir = {toxinidir}
 commands = black {posargs:{env:APPLY_BLACK:--check}} --skip-string-normalization \
     --config pyproject.toml "{env:LINT_ARGS:.}"
 
+## ISORT ##
+# To check : tox -e isort
+# To fix : from python use keyboard short cut shift + alt + O to trigger organize imports editor action.
 [testenv:isort]
 description = isort
 deps = isort >= 5.0.0
@@ -378,7 +390,7 @@ commands =
     - python -m pylint src{/}{env:PY_PACKAGE}
     - python -m pylint tests
 
-
+# TODO Alan Look to fix later
 [testenv:prospector]
 description = Analyse Python code and output information about errors, potential problems, convention violations and complexity.
     Runs the prospector tool which brings together the functionality of other Python analysis tools such as Pyflakes and McCabe complexity.
@@ -398,7 +410,7 @@ commands_post =
 
 
 ## GENERATE ARCHITECTURE GRAPHS
-
+# TODO Alan look to fix later
 [testenv:pydeps]
 description = Visualise the dependency graphs (roughly which module imports which), by examining the
     Python code. The dependency graph(s) are rendered in .svg file(s) and saved on the disk. By default, the generated
