added py312 and fixed the tox type task . Also remove the None for the self.static_pixmap since itwill be created down and no need to put it to None. I see mypy is tricky sometime

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
+    {py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
     coverage
 isolated_build = true
 skip_missing_interpreters = true
@@ -16,7 +16,7 @@ python =
     3.9: {py39}{, -path, -sdist, -wheel, -edit}
     3.10: {py310}{, -path, -sdist, -wheel, -edit}
     3.11: {py311}{, -path, -sdist, -wheel, -edit}
-
+    3.12: {py312}{, -path, -sdist, -wheel, -edit}
 
 [gh-actions:env]
 PLATFORM =
@@ -62,13 +62,13 @@ commands =
 
 # DEV
 # Alan : pypy3 is the any interpretor of python version 3.x.x
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
 
 # SDIST
 # Alan : pypy3 is the any interpretor of python version 3.x.x
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
 description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
@@ -77,7 +77,7 @@ setenv =
     {[testenv]setenv}
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python3}
 setenv = {[wheel_env]setenv}
@@ -86,7 +86,7 @@ changedir = {toxinidir}
 commands = pip wheel --wheel-dir {env:_WHEEL_DIR} {toxinidir}
 
 # Install WHEEL and TEST
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
 description = Install Wheel, and Test
 basepython = {env:TOXPYTHON:python3}
 setenv =
@@ -99,7 +99,7 @@ commands_pre =
 
 
 # PATH
-[testenv:{py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
+[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
 description = Add Source Code to Path & Test
 setenv =
     {[testenv]setenv}
@@ -165,17 +165,16 @@ commands =
 [testenv:type]
 description = Type checking with mypy
 basepython = {env:TOXPYTHON:python3}
-deps = -r {env:REQS_FILE:{env:DEFAULT_REQS_FILE:reqs-typing.txt}}
+deps = mypy
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
     # Account for possible mypy confusion with detecting packages
     # Might happen, if Test Suite grows into having more than 1 conftest.py
-    python -c 'open("tests/__init__.py", "a").close();'
-commands = mypy --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
+commands =  mypy --ignore-missing-imports --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
 commands_post =
     # delete temporarily created empty __init__.py in tests dir
-    python -c 'import os; os.remove("tests/__init__.py");'
+    #python -c 'import os; os.remove("tests/__init__.py");'
 
 
 ##### DOCUMENTATION #####
