--- a/tox.ini
+++ b/tox.ini
@@ -140,7 +140,7 @@ commands =
     coverage report --skip-covered --show-missing -i
     coverage xml -o {toxworkdir}/coverage.xml -i
     coverage html -d {toxworkdir}/htmlcov -i
-depends = {py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
+depends = {py312, py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
 
 
 # POETRY EXPORT
