--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     {py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
     coverage
 isolated_build = true
+ignore_basepython_conflict = true # https://tox.wiki/en/latest/config.html#ignore_base_python_conflict
 skip_missing_interpreters = true
 minversion = 3.14
 requires = virtualenv >= 20.0.34
