--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
+# Doc: https://tox.wiki/en/latest/config.html#
+# https://tox.wiki/en/latest/config.html#ignore_base_python_conflict we set ignore_basepython_conflict = true
 [tox]
 envlist =
     {py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
     coverage
 isolated_build = true
-ignore_basepython_conflict = true # https://tox.wiki/en/latest/config.html#ignore_base_python_conflict
+ignore_basepython_conflict = true
 skip_missing_interpreters = true
 minversion = 3.14
 requires = virtualenv >= 20.0.34
