--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -44,4 +44,4 @@ formats:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: req-docs.txt
+   - requirements: docs/requirements.txt
