--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ minversion = 3.14
 requires = virtualenv >= 20.0.34
 
 # see https://pypi.org/project/tox-gh-actions
-# ox-gh-actions is a tox plugin which helps running tox on GitHub Actions 
+# tox-gh-actions is a tox plugin which helps running tox on GitHub Actions 
 # with multiple different Python versions on multiple workers in parallel.
 [gh-actions]
 python =
