fixing python eco system

--- a/tox.ini
+++ b/tox.ini
@@ -178,7 +178,7 @@ commands =
 
 
 ## STATIC TYPE CHECKING
-# tox -e pin-deps -- -E typing && tox -r -e type
+# mypy --ignore-missing-imports --show-error-codes src/dmc_view tests
 [testenv:type]
 description = Type checking with mypy
 basepython = {env:TOXPYTHON:python312}
