fixing the pytest config to add Pyside6

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
-# pytest.ini
+# pytest.ini see https://docs.pytest.org/en/7.1.x/reference/customize.html
+# QT fixutre see https://pytest-qt.readthedocs.io/en/latest/intro.html
 
 [pytest]
-pythonpath = /home/python/Desktop/DMC_project/dmc-view/src
+qt_api=pyside6
