--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,13 +123,13 @@ pytest-xdist = { version = "^3.5.0", optional = true }
 mypy = { version = "^1.8.0", optional = true }
 
 # Docs: dev and build dependencies
-sphinx = { version = "~4", optional = true }
-sphinx-autodoc-typehints = { version = ">= 1.10", optional = true }
-sphinx-rtd-theme = { version = "== 0.5.0", optional = true }
-sphinxcontrib-spelling = { version = "~= 7.3.3", optional = true }
-sphinx-autobuild = { version = "^2021.3.14", optional = true }
+sphinx = { version = ">=8.1.3", optional = true }
+sphinx-autodoc-typehints = { version = ">= 2.5.0", optional = true }
+sphinx-rtd-theme = { version = ">= 3.0.1", optional = true }
+sphinxcontrib-spelling = { version = ">= 8.0.0", optional = true }
+sphinx-autobuild = { version = "^2024.10.3", optional = true }
 sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
-sphinxcontrib-mermaid = { version = "^0.9.2", optional = true, python = ">=3.7,<3.13" }
+sphinxcontrib-mermaid = { version = "^1.0.0", optional = true, python = ">=3.7,<3.13" }
 
 ### mypy config 
 # see https://mypy.readthedocs.io/en/stable/config_file.html
