--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ setenv =
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
-    PY_PACKAGE = dmc_view
+    PY_PACKAGE = dmcview
     DIST_DIR = dist
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
@@ -178,7 +178,7 @@ commands =
 
 
 ## STATIC TYPE CHECKING
-# mypy --ignore-missing-imports --show-error-codes src/dmc_view tests
+# mypy --ignore-missing-imports --show-error-codes src/dmcview tests
 [testenv:type]
 description = Type checking with mypy
 basepython = {env:TOXPYTHON:python312}
