--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -178,8 +178,8 @@ jobs:
           WHEEL_SIZE=$(echo $WHEEL_INFO | cut -d ' ' -f 2)
           echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
 
-          # extract '1.12.5.dev0' from 'dmc_view-1.12.5.dev0-py3-none-any.whl'
-          PEP_VERSION=$(echo $WHEEL_NAME | sed -E "s/dmc_view-([^ ]+)-py3-none-any.whl/\1/")
+          # extract '1.12.5.dev0' from 'dmcview-1.12.5.dev0-py3-none-any.whl'
+          PEP_VERSION=$(echo $WHEEL_NAME | sed -E "s/dmcview-([^ ]+)-py3-none-any.whl/\1/")
 
           echo "PEP_VERSION=${PEP_VERSION}" >> $GITHUB_OUTPUT
 
@@ -224,7 +224,7 @@ jobs:
           DIST_DIR=dist
           echo "DIST_DIR=${DIST_DIR}" >> $GITHUB_ENV
           mkdir ${DIST_DIR}
-          mv ".tox/${DIST_DIR}/dmc_view-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
+          mv ".tox/${DIST_DIR}/dmcview-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
           mv "${{ env.WHEEL_PATH }}" "${DIST_DIR}"
           tox -e check -vv -s false
 
