--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,7 +1,6 @@
 name: CI/CD Pipeline
 # Continuous Integration / Continuous Delivery
 
-
 # Triggers on all Branches and v* Tags
 
 ### Stress-Testing, with Multi-Factor Job Matrix, on: ###
@@ -28,11 +27,11 @@ on:
 
 env:
   ### STRESS TEST Job MATRIX ###
-  FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.8\", \"3.9\", \"3.10\", \"3.11\", \"3.12\"]}"
+  FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.8\", \"3.9\", \"3.10\", \"3.11\"]}"
   # Python 3.7 has reached End of Life (EOL) on June 27th, 2023
   # Python 3.12 is in bugfix mode, same as 3.11 -> can start supporting 3.12 it
-  UBUNTU_PY312_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.12\"]}"
-  TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.12\"]}"
+  UBUNTU_PY310_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.10\"]}"
+  TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.9\"]}"
 
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
   RUN_UNIT_TESTS: "true"
@@ -41,8 +40,8 @@ env:
   PUBLISH_ON_PYPI: "true"
   DOCS_ON: "true"
   DRAW_DEPENDENCIES: "true"
-  
   ###############################
+
   ### DOCKER Job Policy ####
   # Override Docker Policy-dependent decision-making and
   # Accept any ALL (branch/build) to Publish to Dockerhub
@@ -58,14 +57,14 @@ env:
   ALWAYS_LINT: "false"
   LINT_JOB_POLICY: '2'  # {2, 3}
   ## Python Runtime version to set the Job runner with ##
-  STATIC_ANALYSIS_PY: "3.12"
+  STATIC_ANALYSIS_PY: "3.10"
   ## Pylint Minimum Acceptance Rating/Score ##
   PYLINT_SCORE_THRESHOLD: "8.2"
 
   #### DOCS Build/Test ####
   ALWAYS_DOCS: "false"
   DOCS_JOB_POLICY: '2'  # {2, 3}
-  DOCS_BUILDER_RUNTIME: "3.12"
+  DOCS_BUILDER_RUNTIME: "3.10"
 
   #### CODE VISUALIZATION Job ####
   ALWAYS_CODE_VIZ: "false"
@@ -76,6 +75,10 @@ jobs:
   # we use the below to read the workflow env vars and be able to use in "- if:" Job conditionals
   # now we can do -> if: ${{ needs.set_github_outputs.outputs.TESTS_ENABLED == 'true' }}
   # github does not have a way to simply do "- if: ${{ env.RUN_UNIT_TESTS == 'true' }} " !!
+  
+  ###############################
+  ### JOB: SET GITHUB OUTPUTS ###
+  ###############################
   set_github_outputs:
     name: Read Workflow Env Section Vars and set Github Outputs
     runs-on: ubuntu-latest
@@ -88,7 +91,7 @@ jobs:
           if [[ $BRANCH_NAME == "stress-test" || $GITHUB_REF == refs/tags/* ]]; then
             echo "matrix=$FULL_MATRIX_STRATEGY" >> $GITHUB_OUTPUT
           else
-            echo "matrix=$UBUNTU_PY312_STRATEGY" >> $GITHUB_OUTPUT
+            echo "matrix=$UBUNTU_PY310_STRATEGY" >> $GITHUB_OUTPUT
           fi
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
@@ -126,7 +129,9 @@ jobs:
     ## Code Visualization - Pipeline Settings ##
       PIPE_CODE_VIZ_POLICY: ${{ steps.derive_code_viz_policy.outputs.POL }}
 
-# RUN TEST SUITE ON ALL PLATFORMS
+############################################
+### JOB: RUN TEST SUITE ON ALL PLATFORMS ###
+############################################
   test_suite:
     runs-on: ${{ matrix.platform }}
     needs: set_github_outputs
@@ -138,19 +143,19 @@ jobs:
     steps:
       - run: echo "Platform -> ${{ matrix.platform }} , Python -> ${{ matrix.python-version }}"
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v5.3.0
         with:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install --upgrade pip && python -m pip install tox==3.28 tox-gh-actions
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4.2.2
 
       - name: Pin 'Static Type Checking' Dependencies
         run: tox -vv -s false -e pin-deps -- -E typing
-       
+
       - name: Do Type Checking
         run: tox -e type -vv -s false
-        
+
       ###### TEST SUITE RUN against Edit and Sdist ######
       - name: Build and Test 'Edit' and 'Sdist' & Build Wheel(s)
         run: |
@@ -178,8 +183,8 @@ jobs:
           WHEEL_SIZE=$(echo $WHEEL_INFO | cut -d ' ' -f 2)
           echo "WHEEL_SIZE=$WHEEL_SIZE" >> $GITHUB_ENV
 
-          # extract '1.12.5.dev0' from 'dmcview-1.12.5.dev0-py3-none-any.whl'
-          PEP_VERSION=$(echo $WHEEL_NAME | sed -E "s/dmcview-([^ ]+)-py3-none-any.whl/\1/")
+          # extract '1.12.5.dev0' from 'github_lab-1.12.5.dev0-py3-none-any.whl'
+          PEP_VERSION=$(echo $WHEEL_NAME | sed -E "s/github_lab-([^ ]+)-py3-none-any.whl/\1/")
 
           echo "PEP_VERSION=${PEP_VERSION}" >> $GITHUB_OUTPUT
 
@@ -209,7 +214,7 @@ jobs:
 
       ## UPLOAD CI ARTIFACTS - Coverage Reports ##
       - name: "Upload Test Coverage as Artifacts"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.6.0
         with:
           name: all_coverage_raw
           path: coverage-${{ matrix.platform }}-${{ matrix.python-version }}.xml
@@ -224,13 +229,13 @@ jobs:
           DIST_DIR=dist
           echo "DIST_DIR=${DIST_DIR}" >> $GITHUB_ENV
           mkdir ${DIST_DIR}
-          mv ".tox/${DIST_DIR}/dmcview-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
+          mv ".tox/${DIST_DIR}/github_lab-${PKG_VERSION}.tar.gz" "${DIST_DIR}"
           mv "${{ env.WHEEL_PATH }}" "${DIST_DIR}"
           tox -e check -vv -s false
 
       ## UPLOAD CI ARTIFACTS - Distro Build(s), 1 sdist and 1 or more wheels ##
       - name: Upload Source & Wheel distributions as Artefacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.6.0
         with:
           name: dist-${{ matrix.platform }}-${{ matrix.python-version }}
           path: ${{ env.DIST_DIR }}
@@ -238,9 +243,14 @@ jobs:
     outputs:
       PEP_VERSION: ${{ steps.extract_wheel_info.outputs.PEP_VERSION }}
 
+
+ ###############################
+ ### JOB: CODE COCERAGE HOST ###
+ ###############################
   codecov_coverage_host:
     runs-on: ubuntu-latest
     needs: test_suite
+    if: false
     steps:
     - uses: actions/checkout@v4
     - name: Get Codecov binary
@@ -260,23 +270,27 @@ jobs:
           echo "Sent to Codecov: $file !"
         done
 
-## DOCKER BUILD and PUBLISH ON DOCKERHUB ## FIXME 
+##################################################
+### JOB: DOCKER BUILD and PUBLISH ON DOCKERHUB ###
+##################################################
 # Ref Page: https://automated-workflows.readthedocs.io/en/main/ref_docker/
-  #docker_build:
-    #needs: [set_github_outputs, test_suite]
-    #uses: boromir674/automated-workflows/.github/workflows/docker.yml@v1.1.0
-    #if: always()
-    #with:
-      #acceptance_policy: ${{ needs.set_github_outputs.outputs.PIPE_DOCKER_POLICY }}
-      #image_slug: "dmc-view"
+  docker_build:
+    needs: [set_github_outputs, test_suite]
+    uses: ./.github/workflows/docker.yml
+    if: false
+    with:
+      acceptance_policy: ${{ needs.set_github_outputs.outputs.PIPE_DOCKER_POLICY }}
+      image_slug: "github-lab"
       # target_stage: "some_stage_alias"  # no stage, means no `--target` flag, on build
-      #tests_pass: ${{ needs.test_suite.result == 'success' }}
-      #tests_run: ${{ !contains(fromJSON('["skipped", "cancelled"]'), needs.test_suite.result) }}
-      #DOCKER_USER: ${{ vars.DOCKER_USER }}
-    #secrets:
-      #DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      tests_pass: ${{ needs.test_suite.result == 'success' }}
+      tests_run: ${{ !contains(fromJSON('["skipped", "cancelled"]'), needs.test_suite.result) }}
+      DOCKER_USER: ${{ vars.DOCKER_USER }}
+    secrets:
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-  ## JOB: Signal for Automated PyPI Upload ##
+  #############################################
+  ### JOB: Signal for Automated PyPI Upload ###
+  #############################################
   check_which_git_branch_we_are_on:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.event.ref, 'refs/tags/v') }}
@@ -319,10 +333,13 @@ jobs:
       ENVIRONMENT_NAME: ${{ steps.set_environment_name.outputs.ENVIRONMENT_NAME }}
       AUTOMATED_DEPLOY: ${{ steps.set_environment_name.outputs.AUTOMATED_DEPLOY }}
 
-  ## JOB: PYPI UPLOAD ##
+  ########################
+  ### JOB: PYPI UPLOAD ###
+  ########################
   pypi_publish:
     needs: [set_github_outputs, test_suite, check_which_git_branch_we_are_on]
-    uses: boromir674/automated-workflows/.github/workflows/pypi_env.yml@8e97f596067fcbbaa0a6927ec1ee47dce4ab5f1a
+    uses: ./.github/workflows/pypi_env.yml
+    if: false 
     with:
       should_trigger: ${{ needs.set_github_outputs.outputs.PUBLISH_ON_PYPI == 'true' && needs.check_which_git_branch_we_are_on.outputs.AUTOMATED_DEPLOY == 'true' }}
       distro_name: cookiecutter_python
@@ -335,11 +352,15 @@ jobs:
     secrets:
       TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
-### STATIC CODE ANALYSIS & LINTING ###
+      
+###########################################
+### JOB: STATIC CODE ANALYSIS & LINTING ###
+###########################################
   lint:
     name: Static Code Analysis
     needs: set_github_outputs
     uses: ./.github/workflows/policy_lint.yml
+    if: false
     with:
       run_policy: ${{ needs.set_github_outputs.outputs.PIPE_SQA_POLICY }}
       dedicated_branches: 'main, master, dev'
@@ -347,21 +368,27 @@ jobs:
       python_version: ${{ needs.set_github_outputs.outputs.PIPE_SQA_PY }}
       pylint_threshold: ${{ needs.set_github_outputs.outputs.PIPE_SQA_PYLINT_PASS_SCORE }}
 
-### DOCS BUILD/TEST - DOCUMENTATION SITE ###
+#################################################
+### JOB: DOCS BUILD/TEST - DOCUMENTATION SITE ###
+#################################################
   docs:
     name: Build Documentation
     needs: set_github_outputs
-    uses: boromir674/automated-workflows/.github/workflows/policy_docs.yml@v1.3.0
+    uses: ./.github/workflows/policy_docs.yml
+    if: false
     with:
       run_policy: '${{ needs.set_github_outputs.outputs.PIPE_DOCS_POLICY }}'
       python_version: ${{ needs.set_github_outputs.outputs.PIPE_DOCS_PY }}
       command: 'tox -s false -e pin-deps -- -E docs && tox -e docs --sitepackages -vv -s false'
 
-### DRAW PYTHON DEPENDENCY GRAPHS ###
+##########################################
+### JOB: DRAW PYTHON DEPENDENCY GRAPHS ###
+##########################################
   code_visualization:
     needs: set_github_outputs
     name: Code Visualization of Python Imports as Graphs, in .svg
-    uses: boromir674/automated-workflows/.github/workflows/python_imports.yml@v1.3.0
+    uses: ./.github/workflows/python_imports.yml
+    if: false
     with:
       run_policy: '${{ needs.set_github_outputs.outputs.PIPE_CODE_VIZ_POLICY }}'
       branches: 'main, master, dev'
@@ -369,11 +396,13 @@ jobs:
       python_version: '3.10'
       artifacts_dir: 'dependency-graphs'
 
-### Make a Github Release ###
+##################################
+### JOB: Make a Github Release ###
+##################################
   gh_release:
     needs: [test_suite, check_which_git_branch_we_are_on]
     if: ${{ needs.check_which_git_branch_we_are_on.outputs.AUTOMATED_DEPLOY == 'true' }}
-    uses: boromir674/automated-workflows/.github/workflows/gh-release.yml@test
+    uses: ./.github/workflows/gh-release.yml
     name: 'GH Release'
     with:
       tag: ${{ github.ref_name }}
