--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,15 @@
 # {toxworkdir} the directory where virtual environments are created and sub directories for packaging reside
 # which defaults to {toxinidir}/.tox
 # Doc: https://tox.wiki/en/latest/config.html
-# https://tox.wiki/en/latest/config.html#ignore_base_python_conflict we set ignore_basepython_conflict = true
 
 [tox]
 envlist =
-    {py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
+    {py313, py312, py311, py310, py39, py38, py37, py36}-{edit, sdist, wheel}-{linux, macos, windows}
     coverage
 isolated_build = true
 ignore_basepython_conflict = true
 skip_missing_interpreters = true
-minversion = 3.14
+minversion >=4.0.0
 requires = virtualenv >= 20.0.34
 
 # see https://pypi.org/project/tox-gh-actions
@@ -29,6 +28,7 @@ python =
     3.10: {py310}{, -path, -sdist, -wheel, -edit}
     3.11: {py311}{, -path, -sdist, -wheel, -edit}
     3.12: {py312}{, -path, -sdist, -wheel, -edit}
+    3.13: {py313}{, -path, -sdist, -wheel, -edit}
 
 # github action enviroment or operating system to use 
 [gh-actions:env]
@@ -40,6 +40,9 @@ PLATFORM =
 # Test environments: are defined under the testenv section and individual testenv:<env_name> sections, 
 # where <env_name> is the name of a specific environment.
 # Settings defined in the top-level testenv section are automatically inherited by individual environments unless overridden. 
+#  base configuration for run environments (fallback location for missing values for a test/run environment)
+# in case there is no match from envlist, the below run (fallback)
+# Note: this env. get executed from tox -e test ( the testenv)
 [testenv]
 description = An environment designed to facilitate testing (running the test suite)
 passenv =
@@ -53,20 +56,22 @@ passenv =
     codecov: TRAVIS TRAVIS_*
 setenv =
 # It will overide variables in passenv in case of collision
-    PYTHONPATH = {toxinidir}{/}tests
+    PYTHONPATH = {toxinidir}{/}tests 
     PYTHONBUFFERED = yes
     TEST_RESULTS_DIR = {toxinidir}{/}test-results
     MYPYPATH = {toxinidir}{/}src{/}stubs
     PY_PACKAGE = dmcview
+    PKG_VERSION = 0.1.0 # Attention: This needs to be changed if yo uppgrade the version 
     DIST_DIR = dist
     COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
     TEST_STATUS_DIR = {envtmpdir}
     PYPY3323BUG = 1
-    black,lint,isort,ruff: LINT_ARGS = "src tests scripts"
+    LINT_ARGS = "src tests scripts"
     # Fallback File name for storing output of for all poetry export operations
     DEFAULT_REQS_FILE = reqs.txt
 extras =
     test
+     # extras = test line tells tox to install the optional-dependencies section listed in pyproject.toml for running your test suite; this should include pytest.
 commands =
 # --cov-config pyproject.toml
     pytest -ra --cov --cov-report=term-missing \
@@ -75,17 +80,23 @@ commands =
       {posargs:-n auto} tests
 
 
+#######################
+### Package Version ###
+#######################
+#Note: sets the package version from the src/dmcview/__init__.py
+[testenv:version]
+commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERSION']=importlib.metadata.version('dmcview');print(os.environ['PKG_VERSION'])"
 # DEV
 # pypy3 is the any interpretor of python version 3.x.x
 # create a list of task from py312-edit-linux, py312-edit-maco, py312-edit-windows
 # py311-edit-linux etc... 
-[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
+[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }edit{, -linux, -macos, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
 
 # SDIST
-# Alan : pypy3 is the any interpretor of python version 3.x.x
-[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
+# Note : pypy3 (factored name) is the any interpretor of python version python 3.0.0
+[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }sdist{, -linux, -macos, -windows}]
 description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
@@ -94,7 +105,7 @@ setenv =
     {[testenv]setenv}
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
-[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
+[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python312}
 setenv = {[wheel_env]setenv}
@@ -103,7 +114,7 @@ changedir = {toxinidir}
 commands = pip wheel --wheel-dir {env:_WHEEL_DIR} {toxinidir}
 
 # Install WHEEL and TEST
-[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
+[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
 description = Install Wheel, and Test
 basepython = {env:TOXPYTHON:python312}
 setenv =
@@ -116,7 +127,7 @@ commands_pre =
 
 
 # PATH
-[testenv:{py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
+[testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }path{, -linux, -macos, -windows}]
 description = Add Source Code to Path & Test
 setenv =
     {[testenv]setenv}
@@ -177,25 +188,10 @@ commands =
     python -c 'print( "\n  Generated requirements file: " + "{env:REQS_FILE:{env:DEFAULT_REQS_FILE}}" );'
 
 
-## STATIC TYPE CHECKING
-# mypy --ignore-missing-imports --show-error-codes src/dmcview tests
-[testenv:type]
-description = Type checking with mypy
-basepython = {env:TOXPYTHON:python312}
-deps = mypy
-skip_install = true
-changedir = {toxinidir}
-commands_pre =
-    # Account for possible mypy confusion with detecting packages
-    # Might happen, if Test Suite grows into having more than 1 conftest.py
-commands =  mypy --ignore-missing-imports --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
-commands_post =
-    # delete temporarily created empty __init__.py in tests dir
-    #python -c 'import os; os.remove("tests/__init__.py");'
 
-
+#########################
 ##### DOCUMENTATION #####
-
+#########################
 # tox -e pin-deps -- -E docs && TOC_API="python_api" tox -e apidoc -v -- -f --tocfile "$TOC_API"
 
 # will generate inside 'docs/contents/35_refs/api/modules':
@@ -248,8 +244,9 @@ changedir = {toxinidir}
 commands = sphinx-autobuild docs docs{/}_build{/}html {posargs}
 
 
+###################
 ## PYTHON PACKAGING
-
+###################
 [testenv:build]
 description = Create a source and wheel distribution.
     Creates .tar.gz and .whl files in the {env:DIST_DIR} folder, that can be upload to a pypi index server.
@@ -258,9 +255,9 @@ deps = build
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
-    python -c 'import os; import shutil; d = "{env:DIST_DIR}"; exec("if os.path.exists(d):\n    shutil.rmtree(d)");'
+    python -c 'import os; import shutil; d = "{env:DIST_DIR}"; exec("if os.path.exists(d):  shutil.rmtree(d)");'
 commands =
-    python -m build {toxinidir} --outdir {env:DIST_DIR}
+    python -m build {toxinidir} --outdir {env:DIST_DIR} # version is taken from pyproject.toml under [tool.poetry]
 
 [testenv:check]
 description = Check the code for compliance with best practises of Python packaging ecosystem (PyPI, pip, Distribute, etc).
@@ -274,11 +271,12 @@ commands =
     pyroma --file {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
     python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}*
     # TODO Improvement run 'pyroma --pypi' from some script/CI server after uploading to test-pypi
-depends = build
+depends = build # This is solely meant to specify dependencies and order in between a target run set.It will not run the build
 
 
-## DEPLOYMENT
-
+#############
+## DEPLOYMENT  --Alan Pending now 
+#############
 [testenv:deploy]
 # Deploy to test.pypi.org : TWINE_USERNAME=user TWINE_PASSWROD=pass PACKAGE_DIST_VERSION=1.0.0 tox -e deploy
 # Deploy to pypi.org      : TWINE_USERNAME=user TWINE_PASSWROD=pass PACKAGE_DIST_VERSION=1.0.0 PYPI_SERVER=pypi tox -e deploy
@@ -299,9 +297,9 @@ deps =
     twine==3.4.0
 skip_install = true
 commands_pre =
-    python -c 'import os; n = "TWINE_USERNAME"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
-    python -c 'import os; n = "TWINE_PASSWORD"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
-    python -c 'import os; n = "PACKAGE_DIST_VERSION"; v = os.environ.get(n); exec("if not v:\n    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "TWINE_USERNAME"; v = os.environ.get(n); exec("if not v:    print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "TWINE_PASSWORD"; v = os.environ.get(n); exec("if not v:   print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
+    python -c 'import os; n = "PACKAGE_DIST_VERSION"; v = os.environ.get(n); exec("if not v:   print(\"Please set the \" + str(n) + \" variable.\")\n    exit(1)");'
     python -c 'import os; n = "PYPI_SERVER"; exec("if n in os.environ:\n    v = os.environ[n]\n    if v != \"pypi\":\n        print(\"Environment variable PYPI_SERVER detected, but was not set to pypi. Please set to pypi or run tox -e deploy from an environment where the PYPI_SERVER variable is NOT present at all.\")\n        exit(1)");'
     python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PACKAGE_DIST_VERSION:MISSMATCHED_PACKAGE_DIST_VERSION_ERROR}*
 commands =
@@ -309,7 +307,6 @@ commands =
 
 
 ## COVERAGE
-
 [testenv:clean]
 description = Clean the working directory from any previously computed code coverage results.
     Removes any data resulted from measuring code coverage. Useful before running the test suite
@@ -333,6 +330,24 @@ commands =
     coverage html
 
 
+## STATIC TYPE CHECKING
+# mypy --ignore-missing-imports --show-error-codes src/dmcview tests
+[testenv:type]
+description = Type checking with mypy
+basepython = {env:TOXPYTHON:python312}
+deps = mypy
+skip_install = true
+changedir = {toxinidir}
+commands_pre =
+    # Account for possible mypy confusion with detecting packages
+    # Might happen, if Test Suite grows into having more than 1 conftest.py
+commands =  mypy --ignore-missing-imports --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
+commands_post =
+    # delete temporarily created empty __init__.py in tests dir
+    #python -c 'import os; os.remove("tests/__init__.py");'
+
+
+
 # CODE LINTING, STATIC (STYLE) CHECKING
 # Alan Below:
 # tox -e lint
@@ -352,18 +367,23 @@ skip_install = true
 changedir = {toxinidir}
 commands =
     isort {posargs:{env:APPLY_LINT:--check}} "{env:LINT_ARGS:.}"
-    black {posargs:{env:APPLY_LINT:--check}} -S --config pyproject.toml "{env:LINT_ARGS:.}"
+    # black {posargs:{env:APPLY_LINT:--check}} -S --config pyproject.toml "{env:LINT_ARGS:.}"  Note: See black blow
+
 
 ## BLACK ##
 # To check : tox -e black
-# To fix : from python right click and select "formatt" 
+# To fix : from python right click and select "format"
+# Error: Python 3.12.5 has a memory safety issue that can cause Black's AST safety checks to fail. Please upgrade to Python 3.12.6 or downgrade to Python 3.12.4
+# Note: we will ignore it now and if we go up to python 3.13; we will enable it again 
 [testenv:black]
 description = black ops
 deps = black
 skip_install = true
 changedir = {toxinidir}
-commands = black {posargs:{env:APPLY_BLACK:--check}} --skip-string-normalization \
-    --config pyproject.toml "{env:LINT_ARGS:.}"
+#commands = black {posargs:{env:APPLY_BLACK:--check}} --skip-string-normalization \
+#   --config pyproject.toml "{env:LINT_ARGS:.}" 
+commands = python -c 'print("cancelled for now python 3.12.5 has memory safety issue that can cause Black AST safety check to fail")'
+
 
 ## ISORT ##
 # To check : tox -e isort
@@ -375,13 +395,17 @@ skip_install = true
 changedir = {toxinidir}
 commands = isort {posargs:{env:APPLY_ISORT:--check}} "{env:LINT_ARGS:.}"
 
+## Static security check  
 [testenv:bandit]
 description = static code security check
-deps = bandit[toml]
+deps = bandit[toml] # optional with toml config support
 skip_install = true
 commands = bandit -r -c pyproject.toml {posargs:src tests}
 
+
+#######################
 ## Code Static Analysis
+#######################
 
 ## RUFF ##
 # To see DIFF    : tox -e ruff -- --diff
@@ -394,58 +418,62 @@ deps = ruff
 skip_install = true
 commands = ruff check "{env:LINT_ARGS:.}" {posargs}
 
+## Static code analyser: checks for errors, enforces a coding standard, looks for code smells, and can make suggestions about how the code could be refactored.
 [testenv:pylint]
 description = Run the Pylint tool to analyse the Python code and output
     information about errors, potential problems and convention violations
 deps =
-    pylint ; python_version == '3.11'
-    pylint == 2.7.4 ; python_version < '3.11'
+    pylint >= 3.3.3 
 usedevelop = true
 changedir = {toxinidir}
 commands =
     - python -m pylint src{/}{env:PY_PACKAGE}
     - python -m pylint tests
 
-# TODO Alan Look to fix later
+## Static code analyser https://prospector.landscape.io/en/master/
 [testenv:prospector]
 description = Analyse Python code and output information about errors, potential problems, convention violations and complexity.
     Runs the prospector tool which brings together the functionality of other Python analysis tools such as Pyflakes and McCabe complexity.
     We run tools: Pyflakes, Pyroma, McCabe and Dodgy
-deps = prospector[with_pyroma] == 1.3.1
+deps = prospector[with_pyroma] == 1.13.3
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
     # We do not run pylint, since we have a dedicated pylint env for it.
     # Prospector still tries to read .pylintrc, which causes a crash (because .pylintrc was generated with a pylint version higher than the one supported by prospector)
     # So we temporarily "hide" .pylintrc from prospector
-    python -c 'import os; f = ".pylintrc"; exec("if os.path.exists(f):\n    os.rename(f, \".pylintrc-bak\")")'
+    python -c 'import os; f = ".pylintrc"; exec("if os.path.exists(f):   os.rename(f, \".pylintrc-bak\")")'
 commands = prospector .
 commands_post =
     # We "restore" .pylintrc (to be available to the pylint env command)
-    python -c 'import os; f = ".pylintrc-bak"; exec("if os.path.exists(f):\n    os.rename(f, \".pylintrc\")")'
+    python -c 'import os; f = ".pylintrc-bak"; exec("if os.path.exists(f):   os.rename(f, \".pylintrc\")")'
 
 
 ## GENERATE ARCHITECTURE GRAPHS
-# TODO Alan look to fix later
 [testenv:pydeps]
 description = Visualise the dependency graphs (roughly which module imports which), by examining the
     Python code. The dependency graph(s) are rendered in .svg file(s) and saved on the disk. By default, the generated
-    files are stored in the 'pydoer-graphs' directory, inside the project's root folder. You can use the PYDEPS_DIR
+    files are stored in the pydoer-graphs directory, inside the projects root folder. You can use the PYDEPS_DIR
     environment variable to determine the directory location to store the files. If the directory does not exist
-    it gets created. Requires that the 'dot' executable is in your PATH. Installing the graphviz library should make
-    the dot executable available in your PATH. Installing 'graphviz':
-    * For Linux users using Debian-based distributions (ie Ubuntu, Debian, Mint), please run "sudo apt install graphviz"
-    * For MacOS users with Homebrew, please run "brew install graphviz"
+    it gets created. Requires that the dot executable is in your PATH. Installing the graphviz library should make
+    the dot executable available in your PATH. Installing graphviz:
+    * For Linux users using Debian-based distributions (ie Ubuntu, Debian, Mint), please run sudo apt install graphviz
+    * For MacOS users with Homebrew, please run brew install graphviz
+
 basepython = {env:TOXPYTHON:python312}
 passenv =
     HOME
     PYDEPS_DIR
 deps =
-    pydeps==1.9.13
+    pydeps==3.0.0
+
 usedevelop = true
+
 changedir = {toxinidir}
+
 commands_pre =
-    python -c 'import os; p = "{env:PYDEPS_DIR:pydoer-graphs}"; exec("if not os.path.exists(p):\n    os.mkdir(p)");'
+    python -c 'import os; p = "{env:PYDEPS_DIR:pydoer-graphs}"; exec("if not os.path.exists(p):  os.mkdir(p)");'
+
 commands =
     pydeps --version
 
@@ -472,6 +500,8 @@ commands =
     python -c 'import os; print("\nGenerated dependency graph(s), as .svg files."); print("The graph(s) reside in the \"" + os.path.join("{toxinidir}", "{env:PYDEPS_DIR:pydoer-graphs}") + "\" directory and you can now view them ie in your browser.\n")'
 
 
+
+# Note: Error fix it Alan
 [testenv:dev-env]
 description = Generate a virtual environment for local development
 basepython = {env:TOXPYTHON:python312}
