fixing more tox testenv** . It is a messy and very complex file

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ PLATFORM =
 #  base configuration for run environments (fallback location for missing values for a test/run environment)
 # in case there is no match from envlist, the below run (fallback)
 # Note: this env. get executed from tox -e test ( the testenv)
+# Note: tox take its dependency if not override in deps from pyrpoject.toml section [tool.poetry.dependencies] 
 [testenv]
 description = An environment designed to facilitate testing (running the test suite)
 passenv =
@@ -86,6 +87,8 @@ commands =
 #Note: sets the package version from the src/dmcview/__init__.py
 [testenv:version]
 commands = python -c "import importlib.metadata; import os; os.environ['PKG_VERSION']=importlib.metadata.version('dmcview');print(os.environ['PKG_VERSION'])"
+
+
 # DEV
 # pypy3 is the any interpretor of python version 3.x.x
 # create a list of task from py312-edit-linux, py312-edit-maco, py312-edit-windows
@@ -100,18 +103,20 @@ usedevelop = true
 description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
-[wheel_env]
+# Note: this can be run tox -e wheel which make a match as testenv we run it as tox -e test to match 
+[wheel_env] # Note: this will not inherit from testenv since it is not testXXX
 setenv =
-    {[testenv]setenv}
+    {[testenv]setenv} 
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
 [testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python312}
-setenv = {[wheel_env]setenv}
+setenv = {[wheel_env]setenv} # Note: _WHEEL_DIR is missing the value for "{env:DIST_DIR}" 
 skip_install = true
 changedir = {toxinidir}
-commands = pip wheel --wheel-dir {env:_WHEEL_DIR} {toxinidir}
+# Note: No need for "env:BUILD_DEST" since it is empty or has no value or null 
+commands = pip wheel --wheel-dir {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}} {toxinidir}
 
 # Install WHEEL and TEST
 [testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel-test{, -linux, -macos, -windows}]
