--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ exclude = [
 
 ### Dependency Constraints, aka Requirements ###
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.10,<=3.13"
 pyside6= ">=6.6.1"
 
 
@@ -102,6 +102,7 @@ pytest = { version = "^8.0.0", optional = true }
 pytest-cov = { version = "^4.1.0", optional = true }
 pytest-explicit = { version = "^1.0.1", optional = true }
 pytest-xdist = { version = "^3.5.0", optional = true }
+pytest-qt = {version="4.4.0", optional =true}
 
 # Type Checking
 mypy = { version = "^1.8.0", optional = true }
